--- a/Dockerfile.runtime
+++ b/Dockerfile.runtime
@@ -30,6 +30,9 @@ RUN wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add
     && echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list \
     && apt-get update \
     && apt-get install -y google-chrome-stable \
+    && apt-get install -y fonts-indic \
+    && apt-get install -y fonts-noto \
+    && apt-get install -y fonts-noto-cjk \
     && rm -rf /var/lib/apt/lists/*
 
 # Enable corepack for pnpm
