--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "dotenv": "^16.5.0",
+    "firebase": "^11.9.1",
     "firebase-admin": "^13.4.0",
     "puppeteer": "^24.10.2"
   },
