--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,6 +13,9 @@
     "deploy:preview": "pnpm build && cd ../.. && firebase hosting:channel:deploy preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@form-shot/shared": "workspace:*",
@@ -20,6 +23,7 @@
     "@mui/icons-material": "^6.4.12",
     "@mui/material": "^7.1.2",
     "@reduxjs/toolkit": "^2.8.2",
+    "date-fns": "^3.6.0",
     "firebase": "^11.9.1",
     "i18next": "^23.16.8",
     "react": "^18.3.1",
