--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -17,13 +17,15 @@
     "node": "22"
   },
   "dependencies": {
+    "@types/pdfkit": "^0.17.3",
+    "archiver": "^7.0.1",
     "firebase-admin": "^13.4.0",
     "firebase-functions": "^6.1.1",
-    "archiver": "^7.0.1"
+    "pdfkit": "^0.17.2"
   },
   "devDependencies": {
-    "typescript": "^5.8.3",
+    "@types/archiver": "^6.0.2",
     "@types/node": "^24.0.4",
-    "@types/archiver": "^6.0.2"
+    "typescript": "^5.8.3"
   }
 }
